fixes sticky navbar jumps

--- a/src/components/styles/banner.scss
+++ b/src/components/styles/banner.scss
@@ -1,4 +1,4 @@
-.banner {
+#banner {
   flex: 0 0 100%;
   padding-top: 10px;
   height: 300px;
