--- a/src/components/styles/navbar.scss
+++ b/src/components/styles/navbar.scss
@@ -5,6 +5,7 @@ nav, nav a:hover, nav a:focus {
 
 nav {
   width: 100%;
+  height: 50px;
 }
 
 nav ul {
@@ -22,6 +23,10 @@ nav ul li {
 
 a {
   text-decoration: none;
+}
+
+#nav-container {
+  height: 50px;
 }
 
 .stuck {
